tests/ui/issues/issue-43250.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:9:8
   |
LL |     m!(y);
   |        ^

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:11:8
   |
LL |     m!(C);
   |        ^

error: aborting due to 2 previous errors

